<resources>
    <string name="app_name">CannonGame</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="game_exit">Exit</string>
    <string name="exit">Exit</string>
    <string name="save_result">Save</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="level">Choose level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="info_text">The aim the gun at the target, you must touch the screen. The gun will aim at the point of contact with the screen, and fire in a straight line in the specified direction.</string>
    <string name="icon_back">Back icon</string>
    <string name="icon_settings">Settings icon</string>
    <string name="icon_info">Info icon</string>
</resources>
