<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient" >

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/icon_back" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_info"
        android:contentDescription="@string/icon_info" />

    <TextView
        android:id="@+id/headingSettings"
        android:layout_below="@id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="30dp"
        android:fontFamily="serif"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headingLevel"
        android:layout_below="@id/headingSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="@string/level"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/easyLevelButton"
        android:layout_below="@id/headingLevel"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/easy"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <Button
        android:id="@+id/mediumLevelButton"
        android:layout_below="@id/easyLevelButton"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/medium"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <Button
        android:id="@+id/hardLevelButton"
        android:layout_below="@id/mediumLevelButton"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/hard"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />
</RelativeLayout>