<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient" >

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_info" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_settings" />


    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="serif"
        android:text="CannonGame"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="296dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <Button
        android:id="@+id/scoreboardButton"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/scoreboard"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="522dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

</RelativeLayout>